// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`registry getInjections can get all injections registered 1`] = `
[
  {
    "id": Token {
      "identifier": Symbol(registry.string),
    },
    "name": "str",
    "options": {
      "multiple": false,
      "optional": false,
    },
    "type": "property",
  },
  {
    "id": Token {
      "identifier": Symbol(registry.class),
    },
    "options": {
      "multiple": false,
      "optional": false,
    },
    "type": "request",
  },
]
`;

exports[`registry getPropertyInjections can get all property injections 1`] = `
[
  {
    "id": Token {
      "identifier": Symbol(registry.string),
    },
    "name": "str",
    "options": {
      "multiple": false,
      "optional": false,
    },
    "type": "property",
  },
]
`;
